// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer#create detect invalid 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 'a'
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`reducer#create detect invalid 2`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 true
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`reducer#create detect invalid 3`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 1
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;
